--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Min Sida</h1>
+    <h2 id="insult"></h2>
+    <h3 id="play"></h3>
     <script src="index.js"></script>
 </body>
 </html>
